[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = {version = "0.4.38", features = ["serde"]}
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "uuid", "chrono"]}
dotenvy = "0.15.7"
env_logger = "0.11.5"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = "1.0.204"
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["serde", "v4"]}
